--- a/term4/masterpiece.css
+++ b/term4/masterpiece.css
@@ -76,5 +76,6 @@ li {
       color: orange
     }
     .navbar {
-        text-align: center
+        text-align: center;
+        background color: Black;
     }
