--- a/term4/masterpiece.css
+++ b/term4/masterpiece.css
@@ -76,6 +76,10 @@ li {
       color: orange
     }
     .navbar {
+        margin: 10px auto 10px auto;
+        padding: 20px;
+        border: 4px double #000;
+        background-color: #ffffff;
         text-align: center;
         background-color: #000;;
     }
